Next back of code cleanup

--- a/OpenXR-DirectX11-Tutorial/OpenXR-DirectX11-Tutorial/DX11-OpenXR.vcxproj
+++ b/OpenXR-DirectX11-Tutorial/OpenXR-DirectX11-Tutorial/DX11-OpenXR.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="src\easylogging++.h" />
     <ClInclude Include="src\OpenXR-DirectX11-Tutorial.h" />
     <ClInclude Include="src\OpenXR.h" />
+    <ClInclude Include="src\OpenXR_setup.h" />
     <ClInclude Include="src\TutorialStructs.h" />
     <ClInclude Include="src\utils.h" />
   </ItemGroup>
