--- a/OpenXR-DirectX11-Tutorial/OpenXR-Tutorial-002/OpenXR-Tutorial-002.vcxproj.filters
+++ b/OpenXR-DirectX11-Tutorial/OpenXR-Tutorial-002/OpenXR-Tutorial-002.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="src\easylogging++.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\OpenXR-Tutorial-001.cpp">
+    <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
